test fix problem with UI on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .App {
   background-color: #191816;
   color: #E8E4E1;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
