--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,8 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  width: 100vw;
+  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
